<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.AdminMainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="20dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_flight_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFlightBooking"
        android:text="@string/open_flight_booking" />

    <Button
        android:id="@+id/btn_view_itineraries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewBookedItineraries"
        android:text="@string/my_itineraries" />

    <Button
        android:id="@+id/btn_edit_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:onClick="startAdminPanel"
        android:text="@string/open_admin_panel" />
</LinearLayout>
